--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
   <body style="font-size:115%; font-family:calibri; background-color:lightgrey">
     <header style="font-family:verdana">
-      <h1 > Scrum Masters are only effective when they are co-located with their teams </h1>
+      <h1 > Scrum eeeeeeeeeeeeeeMasters are only effective when they are co-located with their teams </h1>
       <h2 > by <a href="https://www.previousnext.com.au/about/team/irma-kelly"> Irma Kelly </a></h2>
     </header>
       <article>
